--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -114,6 +114,7 @@ Library
                    filepath   >= 1   && < 1.5,
                    template-haskell == 2.21.*,
                    hpc        >= 0.6 && < 0.8,
+                   hegg,
                    transformers >= 0.5 && < 0.7,
                    exceptions == 0.10.*,
                    semaphore-compat,
