--- a/hadrian/cabal.project
+++ b/hadrian/cabal.project
@@ -1,4 +1,6 @@
 packages: ./
+          ../utils/ghc-toolchain/
+          ../libraries/ghc-platform/
 
 -- This essentially freezes the build plan for hadrian
 index-state: 2023-03-30T10:00:00Z
