--- a/libraries/base/base.cabal
+++ b/libraries/base/base.cabal
@@ -337,6 +337,7 @@ Library
         Data.Semigroup.Internal
         Data.Typeable.Internal
         Foreign.ForeignPtr.Imp
+        GHC.Generics.Internal
         GHC.IO.Handle.Lock.Common
         GHC.IO.Handle.Lock.Flock
         GHC.IO.Handle.Lock.LinuxOFD
