--- a/rts/rts.cabal.in
+++ b/rts/rts.cabal.in
@@ -162,6 +162,7 @@ library
                       rts/EventLogConstants.h
                       rts/EventTypes.h
                       -- ^ generated
+                      rts/ghc_ffi.h
                       rts/Adjustor.h
                       rts/ExecPage.h
                       rts/BlockSignals.h
