--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -931,6 +931,7 @@ Library
         GHC.Utils.Ppr
         GHC.Utils.Ppr.Colour
         GHC.Utils.TmpFs
+        GHC.Utils.Touch
         GHC.Utils.Trace
         GHC.Utils.Unique
         GHC.Utils.Word64
