--- a/ghc/ghc-bin.cabal.in
+++ b/ghc/ghc-bin.cabal.in
@@ -56,7 +56,7 @@ Executable ghc
     if flag(internal-interpreter)
         -- NB: this is never built by the bootstrapping GHC+libraries
         Build-depends:
-            deepseq        == 1.4.*,
+            deepseq        >= 1.4 && < 1.6,
             ghc-prim       >= 0.5.0 && < 0.11,
             ghci           == @ProjectVersionMunged@,
             haskeline      == 0.8.*,
