ghc-prim: Link against libatomic
Commit b4d39adbb58 made 'hs_cmpxchg64()' available to all architectures.
Unfortunately this made GHC to fail to build on armel, since armel needs
libatomic to support atomic operations on 64-bit word sizes.

Configure libraries/ghc-prim/ghc-prim.cabal to link against libatomic,
the same way as we do in rts/rts.cabal.

(cherry picked from commit fc186b0c0ac56d6ff6225d3f6607be37770fcb52)

--- a/libraries/ghc-prim/ghc-prim.cabal.in
+++ b/libraries/ghc-prim/ghc-prim.cabal.in
@@ -27,6 +27,9 @@ source-repository head
 custom-setup
     setup-depends: base >= 4 && < 5, process, filepath, directory, Cabal >= 1.23 && < 3.9
 
+flag need-atomic
+  default: @CabalNeedLibatomic@
+
 Library
     default-language: Haskell2010
     other-extensions:
@@ -80,6 +83,10 @@ Library
         -- we need libm, but for musl and other's we might need libc, as libm
         -- is just an empty shell.
         extra-libraries: c, m
+
+    if flag(need-atomic)
+        -- for 64-bit atomic ops on armel (#20549)
+        extra-libraries: atomic
 
     if !os(ghcjs)
       c-sources:
