Add flag to enable/disable ghc-toolchain based configurations
This flag is disabled by default, and we'll use the
configure-generated-toolchains by default until we remove the toolchain
configuration logic from configure.

--- a/hadrian/cfg/system.config.in
+++ b/hadrian/cfg/system.config.in
@@ -38,6 +38,7 @@ cc-llvm-backend           = @CcLlvmBackend@
 #===============
 
 ghc-source-path      = @hardtop@
+use-ghc-toolchain    = @EnableGhcToolchain@
 
 # Information about build, host and target systems:
 #==================================================
