--- a/distrib/configure.ac.in
+++ b/distrib/configure.ac.in
@@ -195,6 +195,10 @@ dnl Identify C++ standard library flavour and location
 FP_FIND_CXX_STD_LIB
 AC_CONFIG_FILES([mk/system-cxx-std-lib-1.0.conf])
 
+# Check that we have the same emsdk version as the one we were built with.
+ConfiguredEmsdkVersion=@ConfiguredEmsdkVersion@
+EMSDK_VERSION("", "", ${ConfiguredEmsdkVersion})
+
 dnl ** Set up the variables for the platform in the settings file.
 dnl May need to use gcc to find platform details.
 dnl --------------------------------------------------------------
