--- a/distrib/configure.ac.in
+++ b/distrib/configure.ac.in
@@ -312,7 +312,7 @@ checkMake380 gmake
 
 # Toolchain target files
 PREP_TARGET_FILE
-FIND_GHC_TOOLCHAIN([.])
+FIND_GHC_TOOLCHAIN([.],[YES])
 
 VALIDATE_GHC_TOOLCHAIN([default.target],[default.target.ghc-toolchain])
 
