ci: Make "fast-ci" the default validate configuration
We are trying out a lighter weight validation pipeline where by default
we just test on 5 platforms:

* x86_64-deb10-slow-validate
* windows
* x86_64-fedora33-release
* aarch64-darwin
* aarch64-linux-deb10

In order to enable the "full" validation pipeline you can apply the
`full-ci` label which will enable all the validation pipelines.

All the validation jobs are still run on a marge batch.

The goal is to reduce the overall CI capacity so that pipelines start
faster for MRs and marge bot batches are faster.

Fixes #23694

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -432,7 +432,7 @@ hadrian-multi:
     paths:
       - cabal-cache
   rules:
-    - if: '$CI_MERGE_REQUEST_LABELS !~ /.*fast-ci.*/'
+    - if: '$CI_MERGE_REQUEST_LABELS =~ /.*full-ci.*/'
 
 ############################################################
 # stack-hadrian-build
@@ -830,7 +830,7 @@ perf-nofib:
     - if: $CI_MERGE_REQUEST_ID
     - if: '$CI_COMMIT_BRANCH == "master"'
     - if: '$CI_COMMIT_BRANCH =~ /ghc-[0.9]+\.[0-9]+/'
-    - if: '$CI_MERGE_REQUEST_LABELS !~ /.*fast-ci.*/'
+    - if: '$CI_MERGE_REQUEST_LABELS =~ /.*full-ci.*/'
   tags:
     - x86_64-linux
   before_script:
@@ -897,7 +897,7 @@ perf:
     paths:
       - out
   rules:
-    - if: '$CI_MERGE_REQUEST_LABELS !~ /.*fast-ci.*/'
+    - if: '$CI_MERGE_REQUEST_LABELS =~ /.*full-ci.*/'
 
 ############################################################
 # ABI testing
@@ -937,7 +937,7 @@ abi-test:
     paths:
       - out
   rules:
-    - if: '$CI_MERGE_REQUEST_LABELS !~ /.*fast-ci.*/'
+    - if: '$CI_MERGE_REQUEST_LABELS =~ /.*full-ci.*/'
 
 
 ############################################################
