ghc-experimental: Initial commit

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -351,6 +351,7 @@ lint-submods-branch:
     - .gitlab/ci.sh setup
     - .gitlab/ci.sh configure
     - .gitlab/ci.sh run_hadrian lint:ghc-internal
+    - .gitlab/ci.sh run_hadrian lint:ghc-experimental
     - .gitlab/ci.sh run_hadrian lint:base
     - .gitlab/ci.sh run_hadrian lint:compiler
 
